--- a/src/app/components/clients/profile/profile.component.scss
+++ b/src/app/components/clients/profile/profile.component.scss
@@ -1,5 +1,6 @@
 @import 'content/content-wrapper.component';
 @import 'order-wrapper.component.scss';
+@import 'review-category.component.scss';
 
 .profile-content {
     position: relative;
